Added the ability to handle concurrency using optimistic concurrency.

--- a/ContosoUniversity.csproj
+++ b/ContosoUniversity.csproj
@@ -168,6 +168,10 @@
     <Compile Include="Migrations\201911271707340_DepartmentSP.designer.cs">
       <DependentUpon>201911271707340_DepartmentSP.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911271738553_RowVersion.cs" />
+    <Compile Include="Migrations\201911271738553_RowVersion.designer.cs">
+      <DependentUpon>201911271738553_RowVersion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Department.cs" />
@@ -303,6 +307,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201911271707340_DepartmentSP.resx">
       <DependentUpon>201911271707340_DepartmentSP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911271738553_RowVersion.resx">
+      <DependentUpon>201911271738553_RowVersion.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
