Created a person class for streaminling instructor and student using inheritance. Added person to the model. Updated Migrations to use person.

--- a/ContosoUniversity.csproj
+++ b/ContosoUniversity.csproj
@@ -172,12 +172,17 @@
     <Compile Include="Migrations\201911271738553_RowVersion.designer.cs">
       <DependentUpon>201911271738553_RowVersion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911271833525_Inheritance.cs" />
+    <Compile Include="Migrations\201911271833525_Inheritance.designer.cs">
+      <DependentUpon>201911271833525_Inheritance.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Department.cs" />
     <Compile Include="Models\Enrollment.cs" />
     <Compile Include="Models\Instructor.cs" />
     <Compile Include="Models\OfficeAssignment.cs" />
+    <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AssignedCourseData.cs" />
@@ -310,6 +315,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201911271738553_RowVersion.resx">
       <DependentUpon>201911271738553_RowVersion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911271833525_Inheritance.resx">
+      <DependentUpon>201911271833525_Inheritance.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
